environments/gloo-gateway/gateway-api/live/gloo-portal-demo/base/petstore-api/2-apply-routing-config/petstore-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: petstore-route
  namespace: gloo-system
spec:
  hostnames:
    - petstore.gwapi.glooplatform.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: users-rest-api
          namespace: users
          port: 5000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: petstore-route-policies
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal-cors
      matches:
        - path:
            type: PathPrefix
            value: /users
    - backendRefs:
        - group: ""
          kind: Service
          name: pets-rest-api
          namespace: pets
          port: 5000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: petstore-route-policies
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal-cors
      matches:
        - path:
            type: PathPrefix
            value: /pets
    - backendRefs:
        - group: ""
          kind: Service
          name: store-rest-api
          namespace: store
          port: 5000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: petstore-route-policies
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal-cors
      matches:
        - path:
            type: PathPrefix
            value: /store
